docs: move minigames into single tag
